fixed mobile screen overflow

--- a/src/pages/About_Us.module.css
+++ b/src/pages/About_Us.module.css
@@ -2,7 +2,7 @@
 
 .purpleLinesWrapper {
   position: absolute !important;
- transform: scale(0.) ;
+ transform: scale(0.8) ;
   left: -250px;
   transition: ease-in 1s;
   z-index: 0; /* ensures it's behind everything */
